--- a/src/interns/jonathan-cordero/main.css
+++ b/src/interns/jonathan-cordero/main.css
@@ -51,7 +51,7 @@ body {
 .header {
   height: 95vh;
   position: relative;
-  background-image: linear-gradient(to right bottom, rgba(238, 4, 4, 0.8), rgba(228, 104, 76, 0.8));
+  background-image: linear-gradient(to right bottom, rgba(0, 17, 252, 0.8), rgba(247, 0, 66, 0.8), rgba(0, 0, 0, 0.8));
   background-size: cover;
   background-position: top;
   position: relative;
@@ -91,10 +91,11 @@ body {
 
 .heading-primary-sub {
   display: block;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 400;
-  letter-spacing: 10px;
+  letter-spacing: 5px;
   animation: moveInRight 1s ease-out;
+  margin-left: 14rem;
 }
 
 .u-center-text {
